--- a/README.textile
+++ b/README.textile
@@ -40,6 +40,8 @@ h3. Supports all major 1.0a and 2.0 OAuth APIs out-of-the-box
 
 * Yammer
 
+* Meetup
+
 * and many more! check the "examples folder":http://github.com/fernandezpablo85/scribe-java/tree/master/src/test/java/org/scribe/examples
 
 h3. Small and modular
